--- a/test/fixtures/likes.yml
+++ b/test/fixtures/likes.yml
@@ -1,11 +1,10 @@
 # == Schema Information
 #
-# Table name: books
+# Table name: likes
 #
 #  id         :integer          not null, primary key
-#  name       :string
-#  isbn       :string
-#  author     :string
+#  place_id   :integer
+#  userId     :string
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
 #
@@ -13,11 +12,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
-  isbn: MyString
-  author: MyString
+  place_id: 1
+  userId: MyString
 
 two:
-  name: MyString
-  isbn: MyString
-  author: MyString
+  place_id: 1
+  userId: MyString
