Dumi comlete Place Model CURD and View
1. Add place.picture uploader
2. Complete Place Model CURD
3. Complete Place new edit show and index action with view.

--- a/spec/fixtures/places.yml
+++ b/spec/fixtures/places.yml
@@ -1,3 +1,18 @@
+# == Schema Information
+#
+# Table name: places
+#
+#  id             :integer          not null, primary key
+#  name           :string(255)
+#  latitude       :float(24)
+#  longitude      :float(24)
+#  business_hours :string(255)
+#  description    :string(255)
+#  created_at     :datetime         not null
+#  updated_at     :datetime         not null
+#  picture        :string(255)
+#
+
 place_one:
   name: 南邮图书馆
   latitude: 32.111894
