--- a/config/database.yml
+++ b/config/database.yml
@@ -2,7 +2,7 @@ defaults: &defaults
   adapter: mysql2
   host: 127.0.0.1
   username: root
-  password: 
+  password: 1234
 
 development:
   <<: *defaults
